--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group = 'me.windy41'
-version = '1.0'
+version = '2.0'
 
 sourceCompatibility = '17'
 targetCompatibility = '17'
@@ -11,11 +11,13 @@ targetCompatibility = '17'
 repositories {
     mavenCentral()
     maven { url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
+    maven { url = 'https://m2.dv8tion.net/releases' }
 }
 
 dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.21.5-R0.1-SNAPSHOT'
     compileOnly files('libs/DiscordSRV-Build-1.29.0.jar')
+    implementation 'net.dv8tion:JDA:5.0.0-beta.24'
 }
 
 tasks.withType(JavaCompile) {
@@ -24,6 +26,6 @@ tasks.withType(JavaCompile) {
 
 jar {
     archiveBaseName.set('EggHunt')
-    archiveVersion.set('0.9.0')
+    archiveVersion.set('2.0.0')
     destinationDirectory.set(file("${projectDir}/build/libs"))
 }
